# bumperbot_ws

./: .gitignore  common_commands.txt  frames_2026-07-15_16.27.19.gv
src/bumperbot_bringup/launch/: real_robot.launch.py  simulated_robot.launch.py
src/bumperbot_controller/config/: bumperbot_controllers.yaml  twist_mux_topics.yaml
src/bumperbot_controller/launch/: controller.launch.py
src/bumperbot_cpp_examples/: CMakeLists.txt
src/bumperbot_cpp_examples/src/: _simple_publisher.cpp  _simple_subscriber.cpp  lab_lifecycle_node.cpp  lab_qos_publisher.cpp  lab_qos_subscriber.cpp  simple_publisher.cpp  simple_subscriber.cpp
src/bumperbot_firmware/bumperbot_firmware/: mpu6050_driver.py
src/bumperbot_firmware/firmware/robot_control/: robot_control.ino
src/bumperbot_firmware/firmware/simple_encoder_reader/: simple_encoder_reader.ino
src/bumperbot_firmware/src/: bumperbot_interface.cpp
src/bumperbot_localization/bumperbot_localization/: imu_republisher.py
src/bumperbot_localization/config/: ekf.yaml
src/bumperbot_localization/launch/: local_localization.launch.py
src/bumperbot_localization/src/: imu_republisher.cpp
src/bumperbot_mapping/config/: slam_toolbox.yaml
src/bumperbot_mapping/launch/: slam.launch.py
src/bumperbot_motion/: CMakeLists.txt  package.xml
src/bumperbot_motion/include/bumperbot_motion/: pd_motion_planner.hpp  pure_pursuit.hpp
src/bumperbot_motion/src/: pd_motion_planner.cpp  pure_pursuit.cpp
src/bumperbot_navigation/: CMakeLists.txt  package.xml
src/bumperbot_navigation/config/: costmap.yaml  planner_server.yaml
src/bumperbot_planning/: CMakeLists.txt  global_planner_plugins.xml  package.xml
src/bumperbot_planning/include/bumperbot_planning/: astar_planner.hpp  dijkstra_planner.hpp  dijkstra_planner_old.hpp
src/bumperbot_planning/src/: astar_planner.cpp  dijkstra_planner.cpp  dijkstra_planner_old.cpp
